# day-night

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: day_night.rs  main.rs
